# Tiralabra

./: .coverage  README.md  pyproject.toml  tasks.py
documentation/: Implementation document.md  project specification.md  testing document.md  week1 report.md  week2 report.md  week3 report.md  week4 report.md  week5 report.md
src/: index.py  loop.py  renderer.py  search.py  tile.py
src/tests/: test_queue.py  test_search.py  test_tile.py
