[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Alisa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
